logs/chula.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chula-0.13.3.egg-info'...
Listing './lib/python3.5/site-packages/chula'...
Compiling './lib/python3.5/site-packages/chula/app.py'...
***   File "./lib/python3.5/site-packages/chula/app.py", line 89
    print 'WSGI provider: wsgiref.simple_server (builtin)'
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/collection'...
Compiling './lib/python3.5/site-packages/chula/data.py'...
***   File "./lib/python3.5/site-packages/chula/data.py", line 43
    print 'Unable to format number:', string
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chula/db'...
Listing './lib/python3.5/site-packages/chula/db/engines'...
Compiling './lib/python3.5/site-packages/chula/db/engines/couch.py'...
***   File "./lib/python3.5/site-packages/chula/db/engines/couch.py", line 25
    except ResourceNotFound, ex:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/nosql'...
Compiling './lib/python3.5/site-packages/chula/nosql/couch.py'...
***   File "./lib/python3.5/site-packages/chula/nosql/couch.py", line 197
    except ResourceNotFound, ex:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/pager.py'...
***   File "./lib/python3.5/site-packages/chula/pager.py", line 36
    raise ValueError, 'visiblepages cannot be an even number'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/queue'...
Listing './lib/python3.5/site-packages/chula/queue/messages'...
Compiling './lib/python3.5/site-packages/chula/queue/messages/message.py'...
***   File "./lib/python3.5/site-packages/chula/queue/messages/message.py", line 27
    except ValueError, er:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/queue/mqueue.py'...
***   File "./lib/python3.5/site-packages/chula/queue/mqueue.py", line 46
    except OSError, er:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/queue/server.py'...
***   File "./lib/python3.5/site-packages/chula/queue/server.py", line 52
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/queue/tester.py'...
***   File "./lib/python3.5/site-packages/chula/queue/tester.py", line 18
    print 'Message added to queue:', id
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/chula/session'...
Listing './lib/python3.5/site-packages/chula/session/backends'...
Compiling './lib/python3.5/site-packages/chula/session/backends/couchdb.py'...
***   File "./lib/python3.5/site-packages/chula/session/backends/couchdb.py", line 37
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/session/backends/postgresql.py'...
***   File "./lib/python3.5/site-packages/chula/session/backends/postgresql.py", line 24
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/test'...
Compiling './lib/python3.5/site-packages/chula/testutils.py'...
***   File "./lib/python3.5/site-packages/chula/testutils.py", line 132
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/vendor'...
Compiling './lib/python3.5/site-packages/chula/vendor/fcgi.py'...
***   File "./lib/python3.5/site-packages/chula/vendor/fcgi.py", line 439
    s = struct.pack('!L', nameLength | 0x80000000L)
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/vendor/memcache.py'...
***   File "./lib/python3.5/site-packages/chula/vendor/memcache.py", line 344
    except socket.error, msg:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/vendor/selenium.py'...
***   File "./lib/python3.5/site-packages/chula/vendor/selenium.py", line 193
    raise Exception, result
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/webservice.py'...
***   File "./lib/python3.5/site-packages/chula/webservice.py", line 348
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/www'...
Listing './lib/python3.5/site-packages/chula/www/adapters'...
Compiling './lib/python3.5/site-packages/chula/www/adapters/base.py'...
***   File "./lib/python3.5/site-packages/chula/www/adapters/base.py", line 90
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/www/adapters/fcgi'...
Listing './lib/python3.5/site-packages/chula/www/adapters/mod_python'...
Compiling './lib/python3.5/site-packages/chula/www/adapters/mod_python/adapter.py'...
***   File "./lib/python3.5/site-packages/chula/www/adapters/mod_python/adapter.py", line 29
    except IOError, ex:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/www/adapters/wsgi'...
Listing './lib/python3.5/site-packages/chula/www/controller'...
Compiling './lib/python3.5/site-packages/chula/www/controller/base.py'...
***   File "./lib/python3.5/site-packages/chula/www/controller/base.py", line 137
    except TypeError, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chula/www/controller/error.py'...
***   File "./lib/python3.5/site-packages/chula/www/controller/error.py", line 43
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chula/www/mapper'...
Compiling './lib/python3.5/site-packages/chula/www/mapper/base.py'...
***   File "./lib/python3.5/site-packages/chula/www/mapper/base.py", line 84
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
